[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/mainMenu/HowToPlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="HowToPlay" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1420.0
margin_bottom = -180.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 893.0

[node name="Text1" type="Label" parent="VBoxContainer"]
margin_right = 486.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )

[node name="Text2" type="Label" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 486.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
